@@ -151,154 +151,6 @@ _sel_parse_record_string (pstdout_state_t pstate,
 }
 
 int
-event_data_info (pstdout_state_t pstate,
-		 ipmi_sel_ctx_t sel_ctx,
-		 uint8_t *sel_record,
-		 unsigned int sel_record_len,
-		 int debug,
-		 uint8_t *generator_id,
-		 uint8_t *sensor_type,
-		 uint8_t *sensor_number,
-		 uint8_t *event_type_code,
-		 uint8_t *event_data2_flag,
-		 uint8_t *event_data3_flag,
-		 uint8_t *event_data2,
-		 uint8_t *event_data3)
-{
-  assert (sel_ctx);
-
-  if (generator_id)
-    {
-      if (ipmi_sel_parse_read_generator_id (sel_ctx,
-					    sel_record,
-					    sel_record_len,
-					    generator_id) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_generator_id") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-  
-  if (sensor_type)
-    {
-      if (ipmi_sel_parse_read_sensor_type (sel_ctx,
-					   sel_record,
-					   sel_record_len,
-					   sensor_type) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_sensor_type") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-  
-  if (sensor_number)
-    {
-      if (ipmi_sel_parse_read_sensor_number (sel_ctx,
-					     sel_record,
-					     sel_record_len,
-					     sensor_number) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_sensor_number") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  if (event_type_code)
-    {
-      if (ipmi_sel_parse_read_event_type_code (sel_ctx,
-					       sel_record,
-					       sel_record_len,
-					       event_type_code) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_event_type_code") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  if (event_data2_flag)
-    {
-      if (ipmi_sel_parse_read_event_data1_event_data2_flag (sel_ctx,
-							    sel_record,
-							    sel_record_len,
-							    event_data2_flag) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_event_data1_event_data2_flag") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  if (event_data3_flag)
-    {
-      if (ipmi_sel_parse_read_event_data1_event_data3_flag (sel_ctx,
-							    sel_record,
-							    sel_record_len,
-							    event_data3_flag) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_event_data1_event_data3_flag") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  if (event_data2)
-    {
-      if (ipmi_sel_parse_read_event_data2 (sel_ctx,
-					   sel_record,
-					   sel_record_len,
-					   event_data2) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_event_data2") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  if (event_data3)
-    {
-      if (ipmi_sel_parse_read_event_data3 (sel_ctx,
-					   sel_record,
-					   sel_record_len,
-					   event_data3) < 0)
-	{
-	  if (_sel_parse_err_handle (pstate,
-				     sel_ctx,
-				     debug,
-				     "ipmi_sel_parse_read_event_data3") < 0)
-	    return (-1);
-	  return (0);
-	}
-    }
-
-  return (1);
-}
-
-int
 event_output_time (pstdout_state_t pstate,
 		   ipmi_sel_ctx_t sel_ctx,
 		   uint8_t *sel_record,
