@@ -5,6 +5,12 @@
 	common function.
 
 	* ipmi-sensors/, ipmi-sel/: Use common function appropriately.
+
+	* common/toolcommon/tool-event-common.h,
+	common/toolcommon/tool-event-common.c (event_data_info): Remove
+	function.
+
+	* ipmi-sel/: Update for changes.
 	
 2012-05-24  Albert Chu <chu11@llnl.gov>
 
